# learnCpp

./: .gitignore  CMakeLists.txt  readme.md
projects/: CMakeLists.txt
projects/c1s1/: CMakeLists.txt
projects/c1s1/docs/: doxygen_parameters.txt
projects/c1s1/docs/html/: MainWindow_8cpp.html  MainWindow_8cpp__incl.map  MainWindow_8hpp__dep__incl.map  MainWindow_8hpp__dep__incl.md5  MainWindow_8hpp_source.html  classMainWindow.html  dir_3179e4776335f40d59b451a6ada09c4d_dep.md5  dir_354794ff33e138db59be8f4c710e14db_dep.map  files.html  functions_vars.html  globals_func.html  main_8cpp__incl.map  menudata.js
projects/c1s1/src/: MainWindow.cpp
projects/c1s1/ui/: MainWindow.ui
projects/c1s1_ui/: CMakeLists.txt  MainWindow.hpp  readme.md
projects/c1s1_ui/docs/: doxygen_parameters.txt
projects/c1s1_ui/docs/html/: MainWindow_8cpp.html  MainWindow_8cpp__incl.map  files.html  (+33 more)
projects/c1s1_ui/src/: MainWindow.cpp  main.cpp
projects/c1s1_ui/ui/: MainWindow.ui
projects/c1s3_ui/: CMakeLists.txt  MainWindow.hpp  readme.md
projects/c1s3_ui/src/: MainWindow.cpp
projects/c1s3_ui/ui/: MainWindow.ui
projects/c1s4_cmd/: CMakeLists.txt  readme.md
projects/c1s4_cmd/src/: main.cpp
projects/c1s4_ui/: CMakeLists.txt  MainWindow.hpp
projects/c1s4_ui/src/: MainWindow.cpp
projects/c1s4_ui/ui/: MainWindow.ui
projects/helloWorld/: CMakeLists.txt  MainWindow.h  MainWindow.hpp  readme.md
projects/helloWorld/src/: MainWindow.cpp  main.cpp
projects/helloWorld/ui/: MainWindow.ui
projects/helloWorld_console/: CMakeLists.txt
projects/helloWorld_console/src/: main.cpp
(+32 files in other folders)
